fix dice buttons on iphone

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,3 +41,12 @@
       transform: rotate(360deg);
    }
 }
+
+
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+   div {
+      justify-content: center;
+   }
+}
